@@ -26,10 +26,17 @@ UDP_LEN=65
 UDP_CHECKSUM=-1
 UDP_DATA=DHCPV6
 
-DHCP6_MSG_TYPE=1
+DHCP6_MSG_TYPE=2
 DHCP6_TRANS_ID=0x123
-DHCP6_OP_NUM=2
+DHCP6_OP_NUM=1
 
+DHCP6_OP_CODE=13
+DHCP6_OP_LEN=12
+DHCP6_OPTION=DHCP6_STATUS_CODE
+DHCP6_OP_STATUS_CODE=NOBINDING
+DHCP6_OP_STATUS_MSG=0xabcdef00010203040506
+
+/*
 DHCP6_OP_CODE=3
 DHCP6_OP_LEN=12
 DHCP6_OPTION=DHCP6_OPTION_IANA
@@ -43,6 +50,7 @@ DHCP6_OP_LEN=4
 DHCP6_OPTION=DHCP6_OPTION_IATA
 DHCP6_IATA_IAID=0Xabcdef
 DHCP6_IATA_OP_NUM=0
+*/
 
 /*
 DHCP6_OP_CODE=1
